deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vram
  labels:
    app: vram
spec:
  selector:
    app: vram
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
