deploy/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vram
  labels:
    app: vram
spec:
  to:
    kind: Service
    name: vram
  port:
    targetPort: http
  # tls:
  #   termination: edge
  #   insecureEdgeTerminationPolicy: Redirect
